Project

General

Profile

Actions

Bug #19591

closed

mgr: leak MgrSession from DaemonServer::ms_verify_authorizer

Added by Sage Weil about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

  <kind>Leak_DefinitelyLost</kind>
  <xwhat>
    <text>5,046 (3,168 direct, 1,878 indirect) bytes in 22 blocks are definitely lost in loss record 4,133 of 4,200</text>
    <leakedbytes>5046</leakedbytes>
    <leakedblocks>22</leakedblocks>
  </xwhat>
  <stack>
    <frame>
      <ip>0x9805203</ip>
      <obj>/usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so</obj>
      <fn>operator new(unsigned long)</fn>
      <dir>/builddir/build/BUILD/valgrind-3.11.0/coregrind/m_replacemalloc</dir>
      <file>vg_replace_malloc.c</file>
      <line>334</line>
    </frame>
    <frame>
      <ip>0x31CEBE</ip>
      <obj>/usr/bin/ceph-mgr</obj>
      <fn>DaemonServer::ms_verify_authorizer(Connection*, int, int, ceph::buffer::list&amp;, ceph::buffer::list&amp;, bool&amp;, CryptoKey&amp;)</fn>
      <dir>/usr/src/debug/ceph-12.0.0-2545-gb2faddf/src/mgr</dir>
      <file>DaemonServer.cc</file>
      <line>134</line>
    </frame>
    <frame>
      <ip>0x61A651</ip>
      <obj>/usr/bin/ceph-mgr</obj>
      <fn>ms_deliver_verify_authorizer</fn>
      <dir>/usr/src/debug/ceph-12.0.0-2545-gb2faddf/src/msg</dir>
      <file>Messenger.h</file>
      <line>747</line>
    </frame>
    <frame>
      <ip>0x61A651</ip>
      <obj>/usr/bin/ceph-mgr</obj>
      <fn>verify_authorizer</fn>
      <dir>/usr/src/debug/ceph-12.0.0-2545-gb2faddf/src/msg/async</dir>
      <file>AsyncMessenger.h</file>
      <line>374</line>
    </frame>
    <frame>
      <ip>0x61A651</ip>
      <obj>/usr/bin/ceph-mgr</obj>
      <fn>AsyncConnection::handle_connect_msg(ceph_msg_connect&amp;, ceph::buffer::list&amp;, ceph::buffer::list&amp;)</fn>
      <dir>/usr/src/debug/ceph-12.0.0-2545-gb2faddf/src/msg/async</dir>

/a/sage-2017-04-12_11:32:45-rados:verify-master---basic-smithi/1015842
Actions #1

Updated by Sage Weil about 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Kefu Chai about 7 years ago

  • Assignee set to Sage Weil
Actions #3

Updated by Sage Weil about 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF